--- a/src/pages/Wallet.css
+++ b/src/pages/Wallet.css
@@ -21,3 +21,25 @@ header {
 .headerImg {
   height: 50px;
 }
+
+main {
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  text-align: center;
+}
+
+table {
+  text-align: center;
+  margin: 20px auto;
+}
+
+tr {
+  margin-top: 2px;
+  margin: 2px;
+}
+
+form {
+  margin: 15px;
+}
